--- a/architecture.css
+++ b/architecture.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    09/10/2021
+Last change:    17/11/2021
 Author:    creativemaze
 Primary use:    Architecture
 -------------------------------------------------------------------*/
@@ -118,20 +118,20 @@ ul{
  ----------- */
  
 /* --- 2.1. Logo & Navigation --- */
-.navbar-header h2{
-	font-family: 'Raleway', Arial, sans-serif;
-	font-size: 22px;
-	font-weight: 700;
-	letter-spacing: 1px;
-	text-transform: uppercase;
-	margin: 0;
-	padding-top: 12px;
+nav.navbar.bootsnav .navbar-brand{
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
 	text-decoration: none;
 	color: #ffffff;
 	transition: 0.5s;
+	font-family: 'Montserrat', Arial, sans-serif;
+	font-size: 22px;
+	font-weight: 700;
+	letter-spacing: 1px;
+	text-transform: uppercase;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -139,7 +139,7 @@ ul{
 }
 
 nav.navbar .navbar-brand img.logo{
-   max-width: 200px;
+   width: 100%;
    height: auto;
    display: block;
 }
@@ -369,7 +369,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
-    font-size: 12px;
+    font-size: 13px;
 	font-weight: 600;
 	font-family: 'Raleway', Arial, sans-serif;
     transition: 0.5s;
@@ -489,7 +489,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	min-height: 350px;
+	min-height: 300px;
 	height: 100%;
 	max-width: 1400px;
 	margin: auto;
@@ -509,7 +509,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 	border-right: double 4px #e0e0e0;
 	border-bottom: double 4px #e0e0e0;
-	min-height: 350px;
+	min-height: 300px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -521,12 +521,11 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .border_box{
-	max-width: 350px;
+	max-width: 300px;
 	margin: auto;
 	padding: 0;
 	text-align: left;
 	background: transparent;
-	transition: 0.5s;
 }
 
 .border_box .fas,
@@ -535,7 +534,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #556270;
 	text-align: left;
 	display: block;
-	transition: 0.5s;
 }
 
 .border_box h3{
@@ -1021,10 +1019,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 /* --- 3.6. Architecture Area Six --- */
 .architecture_area_six{
-	max-width: 1400px;
+	max-width: 1280px;
 	margin: 0 auto 9em;
-	padding: 0 30px;
-	position: relative;
+	padding: 0 25px;
 }
 
 .architecture_group_six{
@@ -1034,66 +1031,35 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 40px;
 }
 
-.blog_group{
-	width: 100%;
-	display: flex;
-	flex-wrap: wrap;
-	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 10px 0 rgba(0, 0, 0, 0.19);
-	padding-bottom: 12px;
-	padding-right: 12px;
-	padding-top: 12px;
-	padding-left: 12px;
-}
-
 .blog_col{
-	flex: 50%;
-	width: 50%;
-	padding: 0 20px;
-}
-
-.blog_area{
-	flex: 50%;
-	width: 50%;
+	flex: 33.33%;
+	width: 33.33%;
+	padding: 0 25px;
 }
 
 .blog_box{
-	max-width: 350px;
-	margin: 0 auto;
+	max-width: 400px;
 	position: relative;
-	text-align: center;
-	transition: 0.5s;
+	text-align: left;
 	overflow: hidden;
-	
+	margin: auto;
+	min-height: 150px;
 }
 
-.blog_feat{
+.blog_image{
+	overflow: hidden;
 	position: relative;
-	display: flex;
-	flex-direction: column;
-	justify-content: center;
-	align-items: center;
+}
+
+.blog_area{
+	overflow: hidden;
+	position: relative;
 	background-color: #ffffff;
 }
 
-.blog_col img{
-	vertical-align: middle;
-	width: 100%;
-	height: auto;
-	display: block;
-}
-
-.blog_box > a > img{
-	transition: ease-in-out 1.25s;
-}
-
-.blog_box > a > img:hover{
-	transform: scale(1.15);
-}
-
 .blog_content{
-	max-width: 350px;
-	text-align: left;
-	padding: 25px 10px 25px 25px;
+	text-align: center;
+	padding: 25px 10px 10px;
 }
 
 .blog_date{
@@ -1104,67 +1070,51 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #696969;
 	text-transform: uppercase;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
+	margin-bottom: 0;
 	width: 250px;
+	margin: auto;
+}
+
+.blog_col img{
+	vertical-align: middle;
+	width: 100%;
+	height: auto;
+	display: block;
+}
+
+.blog_image > a > img{
+	transition: ease-in-out 3.25s;
+}
+
+.blog_image > a > img:hover{
+	transform: scale(1.15);
 }
 
 .blog_title a{
 	font-family: 'Raleway' , Arial, sans-serif;
-	font-size: 18px;
+	font-size: 20px;
 	display: block;
 	font-weight: 600;
 	color: #111111;
 	letter-spacing: 1px;
-	text-align: left;
+	text-align: center;
 	text-decoration: none;
 	transition: 0.5s;
 	line-height: 1.4em;
 }
 
-.blog_title a:hover,
-a.blog_btn:hover{
-	opacity: 0.6;
+.blog_btn{
+	max-width: 250px;
+	margin: 0 auto;
 }
 
 a.blog_btn{
-	max-width: 120px;	
-    color: #111111;
-    text-decoration: none;
-	text-transform: uppercase;
-    display: inline-block;
-    font-size: 13px;
-	font-weight: 600;
-	font-family: 'Raleway', Arial, sans-serif;
-    transition: 0.5s;
-    cursor: pointer;
-	letter-spacing: 1px;
-	text-align: center;
-	line-height: 1.2em;
-	padding-bottom: 3px;
-	padding-top: 10px;
-}
-
-a.blog_btn::after{
-	content: "\203A";
-	font-size: 20px;
-	margin: 0;
-	padding: 0;
-	display: inline-block;
-	height: auto;
-	padding-left: 5px;
-	top: 1px;
-	position: relative;
-}
-
-.box_button a{
-	background-color: #556270;
-	width: 150px;
-	min-height: 25px;
-	margin: auto;
-	margin-top: 50px;	
+	width: 190px;	
     border: none;
-    color: #ffffff;
-    padding: 13px 14px;
+    color: #556270;
+	margin: 0 auto;
+	padding-top: 10px;
     text-decoration: none;
 	text-transform: uppercase;
     display: block;
@@ -1173,14 +1123,29 @@ a.blog_btn::after{
 	font-family: 'Raleway', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
-	border: 1px solid #556270;
 	letter-spacing: 1px;
 	text-align: center;
+	line-height: 1.2em;
 }
 
-.box_button a:hover{
+.blog_title a:hover{
+	opacity: 0.6;
+}
+
+a.blog_btn:hover{
 	color: #111111;
-	background: transparent;
+}
+
+.blog_crumb{
+	width: 50px;
+	height: 1px;
+	display: block;
+	border-bottom: solid 2px #556270;
+	margin: 10px auto 0;
+	transition: 0.5s;
+}
+
+a.blog_btn:hover .blog_crumb{
 	border-color: #111111;
 }
 
@@ -1498,6 +1463,7 @@ a.blog_btn::after{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -1673,14 +1639,9 @@ a.footer-brand img{
 	}
 	
 	.blog_col{
-		flex: 100%;
-		width: 100%;
-		max-width: 700px;
-		margin: auto;
-	}
-	
-	.top_level{
-		margin-bottom: 35px;
+		flex: 50%;
+		width: 50%;
+		margin-bottom: 40px;
 	}
 }
 
@@ -1698,8 +1659,8 @@ a.footer-brand img{
 		transform: translateX(-50%);
 	}
 	
-	.navbar-header h2{
-		padding-top: 5px;
+	.navbar-header a.navbar-brand{
+		padding-top: 22px;
 	}
 	
 	nav.navbar.bootsnav ul.nav > li > a{
@@ -1789,6 +1750,10 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
+	.form_area{
+		margin-bottom: 20px;
+	}
+	
 	.footer_col{
 		flex: 50%;
 		width: 50%;
@@ -1835,24 +1800,12 @@ a.footer-brand img{
 		width: 100%;
 	}
 	
-	.blog_col{
-		max-width: 350px;
-	}
-	
-	.blog_area{
+	.client_col{
 		flex: 100%;
 		width: 100%;
 	}
 	
-	.blog_group{
-		padding-bottom: 0;
-	}
-	
-	.blog_date{
-		margin-top: 0;
-	}
-	
-	.client_col{
+	.blog_col{
 		flex: 100%;
 		width: 100%;
 	}
@@ -1860,6 +1813,7 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
