--- a/beauty-spa.css
+++ b/beauty-spa.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    17/10/2021
+Last change:    19/11/2021
 Author:   creativemaze
 Primary use:    Beauty Spa
 -------------------------------------------------------------------*/
@@ -95,7 +95,7 @@ ul{
 	font-size: 40px;
 	font-weight: 700;
 	display: block;
-	color: #ef8e38;
+	color: #f64f59;
 	display: block;
 	text-align: center;
 	letter-spacing: 1px;
@@ -126,7 +126,7 @@ ul{
  
 /* --- 2.1. Logo & Navigation --- */
 nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px !important; 	
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
@@ -138,7 +138,7 @@ nav.navbar.bootsnav .navbar-brand{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 28px;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -190,7 +190,7 @@ nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a{
 }
 
 nav.navbar.bootsnav ul.navbar-right li.dropdown ul.dropdown-menu li a:hover{
-	color: #ef8e38;
+	color: #f64f59;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu{
@@ -233,14 +233,14 @@ nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a{
 }
 
 nav.navbar.bootsnav ul.dropdown-menu.megamenu-content .content ul.menu-col li a:hover{
-	color: #ef8e38;
+	color: #f64f59;
 }
 
 nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
     font-size: 14px;
     font-weight: 600;
 	font-family: 'Montserrat' , Arial, sans-serif;
-    color: #ef8e38;
+    color: #f64f59;
     text-transform: uppercase;
 	letter-spacing: 1px;
 }
@@ -366,7 +366,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .head_btn a{
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	width: 150px;
 	margin: 0 auto;
 	min-height: 30px;
@@ -381,7 +381,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
-	border: 1px solid #ef8e38;
+	border: 1px solid #f64f59;
 	border-radius: 5px;
 	letter-spacing: 1px;
 	text-align: center;
@@ -476,7 +476,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .buttoncol a{
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	width: 200px;
 	min-height: 30px;
 	margin-top: 20px;	
@@ -491,7 +491,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
-	border: 1px solid #ef8e38;
+	border: 1px solid #f64f59;
 	border-radius: 5px;
 	letter-spacing: 1px;
 	text-align: center;
@@ -535,9 +535,9 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 
 .prev_button:hover,
 .next_button:hover{
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	color: #ffffff;
-	border-color: #ef8e38;
+	border-color: #f64f59;
 }
 
 /* 3. MAIN CONTENT
@@ -556,7 +556,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin-bottom: 9em;
 	margin-top: -147px;
 	width: 100%;
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	padding: 3em 0;
 }
 
@@ -584,7 +584,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	text-align: center;
 	background-color: transparent;
-	transition: ease-in-out 0.5s;
 }
 
 .spa_check{
@@ -661,7 +660,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	overflow: hidden;
 	min-height: 150px;
-	transition: 0.5s;
 	margin-bottom: -80px;
 }
 
@@ -670,7 +668,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	width: 100%;
 	height: auto;
 	display: block;
-	transition: ease-in-out 3.25s;
 }
 
 .cube_image{
@@ -695,7 +692,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	font-size: 35px;
 	display: block;
-	color: #ef8e38;
+	color: #f64f59;
 }
 
 .cube_col_box p{
@@ -732,7 +729,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-weight: 900;
 	font-size: 15px;
 	padding-right: 12px;
-	color: #ef8e38;
+	color: #f64f59;
 }
 
 .cube_name{
@@ -752,7 +749,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 16px;
 	display: inline-block;
 	font-weight: 600;
-	color: #ef8e38;
+	color: #f64f59;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.4em;
@@ -791,7 +788,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 0 25px;
 	text-align: center;
 	background: transparent;
-	transition: 0.5s;
 }
 
 .spa_icon_box h3{
@@ -808,7 +804,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .spa_icon_box .fas,
 .spa_icon_box .far{
 	font-size: 35px;
-	color: #ef8e38;
+	color: #f64f59;
 	text-align: center;
 	display: block;
 }
@@ -844,16 +840,12 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	flex: 33.33%;
 	width: 33.33%;
 	padding: 0 15px;
-	overflow: hidden;
-	position: relative;
 }
 
 .service_col{
 	flex: 66.66%;
 	width: 66.66%;
 	padding: 0 15px;
-	overflow: hidden;
-	position: relative;
 }
 
 .info_area{
@@ -872,7 +864,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-size: 40px;
 	font-weight: 700;
 	display: block;
-	color: #ef8e38;
+	color: #f64f59;
 	display: block;
 	text-align: left;
 	letter-spacing: 1px;
@@ -892,7 +884,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 }
 
 .areas_col_button a{
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	width: 150px;
 	min-height: 30px;
 	margin: 12px 0;	
@@ -907,7 +899,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
-	border: 1px solid #ef8e38;
+	border: 1px solid #f64f59;
 	letter-spacing: 1px;
 	text-align: center;
 	border-radius: 5px;
@@ -935,7 +927,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: ease-in-out 0.5s;
 	display: block;
 }
 
@@ -965,7 +956,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .service_content{
 	position: relative;
 	padding: 10px 5px;
-	transition: 0.5s;
 	text-align: left;
 }
 
@@ -989,7 +979,7 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-transform: uppercase;
 	float: right;
 	display: block;
-	color: #ef8e38;
+	color: #f64f59;
 	padding-top: 16px;
 	text-decoration: none;
 	width: 110px;
@@ -1028,14 +1018,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
 	padding-bottom: 40px;
 }
 
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 25px;
+	padding: 40px 25px 0;
 }
 
 .blog_box{
@@ -1045,7 +1034,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	overflow: hidden;
 	margin: auto;
 	min-height: 150px;
-	transition: 0.5s;
 }
 
 .blog_image{
@@ -1061,7 +1049,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 12px;
 	padding-left: 12px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .blog_content{
@@ -1087,7 +1074,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 }
 
@@ -1150,7 +1136,7 @@ a.blog_btn{
 
 a.blog_btn:hover,
 .blog_title a:hover{
-	color: #ef8e38;
+	color: #f64f59;
 }
 
 .blog_crumb{
@@ -1163,7 +1149,7 @@ a.blog_btn:hover,
 }
 
 a.blog_btn:hover .blog_crumb{
-	border-color: #ef8e38;
+	border-color: #f64f59;
 }
 
 /* --- 3.6. Spa Area Six --- */
@@ -1171,7 +1157,7 @@ a.blog_btn:hover .blog_crumb{
 	position: relative;
 	min-height: 350px;
 	height: 100%;
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	margin: 0 0 9em;
 }
 
@@ -1203,7 +1189,6 @@ a.blog_btn:hover .blog_crumb{
 	padding: 25px 20px 15px 20px; 
 	text-align: left;
 	background: #ffffff;
-	transition: 0.5s;
 	min-height: 50px;
 	height: 100%
 }
@@ -1221,11 +1206,11 @@ a.blog_btn:hover .blog_crumb{
 
 .count_box .counter{
 	font-family: 'Montserrat' , Arial, sans-serif;
-	font-size: 35px;
+	font-size: 30px;
 	font-weight: 700;
 	display: block;
 	text-align: center;
-	color: #ef8e38;
+	color: #f64f59;
 	letter-spacing: 1px;
 }
 
@@ -1320,7 +1305,7 @@ a.blog_btn:hover .blog_crumb{
 	font-size: 40px;
 	font-weight: 700;
 	display: block;
-	color: #ef8e38;
+	color: #f64f59;
 	text-align: left;
 	letter-spacing: 1px;
 	line-height: 1.3em;
@@ -1356,7 +1341,7 @@ a.blog_btn:hover .blog_crumb{
 	font-size: 14px;
 	font-weight: 600;
 	display: block;
-	color: #ef8e38;
+	color: #f64f59;
 	letter-spacing: 1px;
 	text-align: center;
 	text-transform: uppercase;
@@ -1431,7 +1416,7 @@ a.blog_btn:hover .blog_crumb{
 }
 
 .bg_col_button a{
-	background-color: #ef8e38;
+	background-color: #f64f59;
 	width: 170px;
 	min-height: 30px;
 	margin: 15px auto 0;	
@@ -1446,7 +1431,7 @@ a.blog_btn:hover .blog_crumb{
 	font-family: 'Montserrat', Arial, sans-serif;
     transition: 0.5s;
     cursor: pointer;
-	border: 1px solid #ef8e38;
+	border: 1px solid #f64f59;
 	letter-spacing: 1px;
 	text-align: center;
 	border-radius: 5px;
@@ -1481,6 +1466,7 @@ a.blog_btn:hover .blog_crumb{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -1633,7 +1619,7 @@ a.footer-brand img{
 	.spa_icon_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 40px;
+		margin: 15px 0;
 	}
 	
 	.second_border{
@@ -1656,7 +1642,6 @@ a.footer-brand img{
 	.blog_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 40px;
 	}
 	
 	.review_col_left{
@@ -1806,7 +1791,6 @@ a.footer-brand img{
 	.blog_col{
 		flex: 100%;
 		width: 100%;
-		padding: 0;
 	}
 	
 	.spa_icon_col{
@@ -1832,6 +1816,7 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
@@ -1845,13 +1830,10 @@ a.footer-brand img{
 	.review_box,
 	.review_col_left,
 	.review_col_right,
-	.spa_icon_col{
+	.spa_icon_col,
+	.spa_group_col{
 		padding-left: 0;
 		padding-right: 0;
-	}
-	
-	.area_button > a{
-		padding-top: 0;
 	}
 }
 
