--- a/law-firm.css
+++ b/law-firm.css
@@ -153,7 +153,7 @@ nav.navbar.bootsnav .navbar-brand{
 	text-decoration: none;
 	color: #ffffff;
 	transition: 0.5s;
-	font-family: 'Montserrat', Arial, sans-serif;
+	font-family: 'Raleway', Arial, sans-serif;
 	font-size: 22px;
 	font-weight: 700;
 	letter-spacing: 1px;
