--- a/interior-design.css
+++ b/interior-design.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    18/10/2021
+Last change:    20/11/2021
 Author:    creativemaze
 Primary use:    Interior Design
 -------------------------------------------------------------------*/
@@ -120,7 +120,7 @@ ul{
  ----------- */
 /* --- 2.1. Logo & Navigation --- */
 nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px !important; 	
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
@@ -132,7 +132,7 @@ nav.navbar.bootsnav .navbar-brand{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 28px;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -522,7 +522,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 35px 30px; 
 	text-align: center;
 	background: #ffffff;
-	transition: 0.5s;
 	min-height: 50px;
 	height: 100%
 }
@@ -788,7 +787,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	text-align: center;
 	overflow: hidden;
 	margin: auto;
-	transition: 0.5s;
 	padding: 0 20px;
 }
 
@@ -977,7 +975,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding: 25px 20px;
 	margin-bottom: 10px;
 	max-width: 350px;
-	transition: 0.5s;
 	overflow: hidden;
 	cursor: pointer;
 }
@@ -1360,7 +1357,6 @@ li.slick-active button{
 .team_col img{
 	width: 100%;
 	height: auto;
-	transition: ease-in-out 0.5s;
 	display: block;
 	border-radius: 50%;
 }
@@ -1370,7 +1366,6 @@ li.slick-active button{
 	overflow: hidden;
 	position: relative;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .overlay {
@@ -1614,6 +1609,7 @@ li.slick-active button{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -1757,6 +1753,7 @@ a.footer-brand img{
 	.icon_col{
 		flex: 50%;
 		width: 50%;
+		margin-bottom: 5px;
 	}
 	
 	.interior_wide_col,
@@ -1894,6 +1891,10 @@ a.footer-brand img{
 		flex: 100%;
 		width: 100%;
 	}
+	
+	.form_area{
+		margin-bottom: 20px;
+	}
 
 	.footer_col{
 		flex: 50%;
@@ -1948,12 +1949,12 @@ a.footer-brand img{
 	.team_col{
 		flex: 100%;
 		width: 100%;
-		padding: 0;
 	}
 	
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
@@ -1970,8 +1971,16 @@ a.footer-brand img{
 	.square_col,
 	.square_box,
 	.review_col_right,
-	.review_col_left{
+	.review_col_left,
+	.review_box,
+	.team_col{
 		padding-left: 0;
 		padding-right: 0;
+	}
+}
+
+@media only screen and (max-width: 375px){
+	.interior_area_four{
+		margin-top: -275px;
 	}
 }
