--- a/gym-fitness.css
+++ b/gym-fitness.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    21/10/2021
+Last change:    20/11/2021
 Author:    creativemaze
 Primary use:    Gym-Fitness
 -------------------------------------------------------------------*/
@@ -148,7 +148,7 @@ ul{
  
 /* --- 2.1. Logo & Navigation --- */
 nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px !important; 	
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
@@ -160,7 +160,7 @@ nav.navbar.bootsnav .navbar-brand{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 28px;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -690,7 +690,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: .5s;
 }
 
 .gym_group_box{
@@ -1402,7 +1401,6 @@ a.blog_btn:hover .blog_crumb{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 	border-radius: 50%;
 }
@@ -1573,6 +1571,7 @@ a.blog_btn:hover .blog_crumb{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -1969,6 +1968,7 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }	
 
@@ -1978,7 +1978,8 @@ a.footer-brand img{
 	.blog_col,
 	.review_col_left,
 	.review_col_right,
-	.review_box{
+	.review_box,
+	.wide_box{
 		padding: 0;
 	}
 	
