--- a/conference.css
+++ b/conference.css
@@ -3,7 +3,7 @@ Main Stylesheet
 
 Project:    Highpoint Corporate Template
 Version:    1.0
-Last change:    29/10/2021
+Last change:    23/11/2021
 Author:    creativemaze
 Primary use:    Conference
 -------------------------------------------------------------------*/
@@ -57,7 +57,7 @@ ul{
 	width: 100%;
 }
 
-.js .loading::before {
+#loading::before {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -68,7 +68,7 @@ ul{
 	background: #ffffff;
 }
 
-.js .loading::after {
+#loading::after {
 	content: '';
 	position: fixed;
 	z-index: 100000;
@@ -121,7 +121,7 @@ ul{
  
 /* --- 2.1. Logo & Navigation --- */
 nav.navbar.bootsnav .navbar-brand{
-    max-width: 200px !important; 	
+    max-width: 200px; 	
 }
 
 .navbar-header a.navbar-brand{
@@ -133,7 +133,7 @@ nav.navbar.bootsnav .navbar-brand{
 	font-weight: 700;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	padding-top: 28px;
+	padding-top: 30px;
 }
 
 .navbar-header a.navbar-brand:hover{
@@ -471,12 +471,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 .left_box h2{
 	font-family: 'Montserrat' , Arial, sans-serif;
 	font-size: 40px;
-	font-weight: 700;
+	font-weight: 500;
 	display: block;
 	color: #ffffff;
 	letter-spacing: 1px;
 	text-align: center;
 	line-height: 1.3em;
+	text-transform: uppercase;
 }
 
 .timer_box{
@@ -750,7 +751,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	color: #ffffff;
 	letter-spacing: 1px;
 	text-align: center;
-	margin-top: 0;
 	line-height: 1.3em;
 }
 
@@ -1110,7 +1110,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: ease-in-out 0.5s;
 	display: block;
 }
 
@@ -1239,14 +1238,13 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	margin: 0 auto;
 	display: flex;
 	flex-wrap: wrap;
-	padding-top: 40px;
-	padding-bottom: 30px;
+	padding-bottom: 40px;
 }
 
 .blog_col{
 	flex: 33.33%;
 	width: 33.33%;
-	padding: 0 20px;
+	padding: 40px 20px 0;
 }
 
 .blog_box{
@@ -1271,7 +1269,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	padding-top: 12px;
 	padding-left: 12px;
 	background-color: #ffffff;
-	transition: ease-in-out 0.5s;
 }
 
 .blog_content{
@@ -1310,7 +1307,6 @@ nav.navbar.bootsnav li.dropdown ul.dropdown-menu.megamenu-content .title{
 	vertical-align: middle;
 	width: 100%;
 	height: auto;
-	transition: 0.5s;
 	display: block;
 }
 
@@ -1741,7 +1737,8 @@ li.slick-active button{
 .conference_area_ten{
 	max-width: 1280px;
 	margin: 0 auto 2em;
-	padding: 0 35px;
+	width: calc(100% - 60px);
+	padding: 0 30px;
 	position: relative;
 	background-size: cover;
 	background-repeat: no-repeat;
@@ -1763,7 +1760,7 @@ li.slick-active button{
 	width: 100%;
 	display: flex;
 	flex-wrap: wrap;
-	padding: 4em 25px;
+	padding: 4em 20px;
 }
 
 .col_info{
@@ -1860,6 +1857,7 @@ li.slick-active button{
 	width: 25%;
 	padding: 0 20px;
 	max-width: 300px;
+	margin: 0 auto;
 }
 
 .footer_col{
@@ -2034,7 +2032,6 @@ a.footer-brand img{
 	.blog_col{
 		flex: 50%;
 		width: 50%;
-		margin-bottom: 40px;
 	}
 }
 
@@ -2231,12 +2228,17 @@ a.footer-brand img{
 	.footer_col{
 		flex: 100%;
 		width: 100%;
+		margin: 0;
 	}
 }
 
 @media only screen and (max-width: 420px){
 	.top_group{
-		padding: 0;
+		padding: 0 15px;
+	}
+	
+	.bg_name{
+		width: 230px;
 	}
 	
 	.bg_col,
@@ -2267,10 +2269,6 @@ a.footer-brand img{
 }
 
 @media only screen and (max-width: 385px){
-	.bg_name{
-		width: 230px;
-	}
-	
 	.client_info img{
 		width: 60px;
 		height: 60px;
@@ -2303,5 +2301,9 @@ a.footer-brand img{
 	
 	.day_col h3{
 		font-size: 13px;
+	}
+	
+	.col_head h3{
+		font-size: 20px;
 	}
 }
